# manus-cine

./: .gitignore  README.md  pyproject.toml
.cursor/skills/manus-cine/: SKILL.md
.github/workflows/: recommend.yml
docs/: REQUIREMENTS.md
recommended/: unknown_unknown.json  克日什托夫基耶斯洛夫斯基_蓝.json  安德烈塔可夫斯基_潜行者.json  安德烈塔可夫斯基_镜子.json  斯坦利库布里克_2001太空漫游.json  王家卫_花样年华.json  米开朗基罗安东尼奥尼_红色沙漠.json  维克多艾里斯_蜂巢幽灵.json  维姆文德斯_德州巴黎.json  英格玛伯格曼_野草莓.json  西奥安哲罗普洛斯_雾中风景.json  贝拉塔尔_撒旦探戈.json  贝拉塔尔_都灵之马.json  阿巴斯基亚罗斯塔米_特写.json
src/manus_cine/: __init__.py  __main__.py  feishu.py  main.py  manus.py  storage.py  trailer.py
trailers/: 20260312_安德烈塔可夫斯基_潜行者.md  20260312_维姆文德斯_德州巴黎.md  20260312_贝拉塔尔_都灵之马.md  20260313_安德烈塔可夫斯基_镜子.md  20260316_英格玛伯格曼_野草莓.md  20260323_贝拉塔尔_撒旦探戈.md  20260330_unknown_unknown.md  20260406_克日什托夫基耶斯洛夫斯基_蓝.md  20260413_unknown_unknown.md  20260420_西奥安哲罗普洛斯_雾中风景.md  20260518_维克多艾里斯_蜂巢幽灵.md  20260525_阿巴斯基亚罗斯塔米_特写.md  20260601_王家卫_花样年华.md  20260608_米开朗基罗安东尼奥尼_红色沙漠.md
