[project]
name = "manus-cine"
version = "0.1.0"
description = "Recommend famous directors' classic films via Manus API, generate trailers, send via Feishu"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
manus-cine = "manus_cine.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manus_cine"]
